CHATS_SIT/force-app/main/default/objects/T_DOC_RSN__c.object
<CustomObject>
    <description>Object storing correspondence details</description>
    <fields>
        <fullName>CDE_TYPE_RCPT__c</fullName>
        <label>Recepient Type</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>TYPE_RCPT_CORSPD</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CND_TRIGR__c</fullName>
        <description>Trigger Condition Check</description>
        <label>Trigger Condition</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Is_Manual__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Manual?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>NME_CORSPD__c</fullName>
        <label>Correspondence Name</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>NME_CORSPD</valueSetName>
        </valueSet>
    </fields>
    <label>Correspondence Reason</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>NME_CORSPD__c</columns>
        <columns>Is_Manual__c</columns>
        <columns>CDE_TYPE_RCPT__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>CR{0000}</displayFormat>
        <label>Reason Code</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Correspondence Reason</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>