CHATS_SIT/force-app/main/default/objects/T_DOC_RSN__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>NME_CORSPD__c</columns>
    <columns>Is_Manual__c</columns>
    <columns>CDE_TYPE_RCPT__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>